--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,12 @@
 spring:
   application:
     name: hexagonal
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/hexagonal
 
 fts:
   client:
     address:
       url: http://localhost:8082/address
+
